# IlinaEngine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
IlinaEngine/: __init__.py  _config_models.py  _ilina_message.py  call_openai.py  engine.py  exceptions.py  skill_loader.py  sync_mcp.py  sysprompt.py  tools.py  tree.py  type.py  utils.py
docs/: IlinaMessage.md  TODO.md  config.md  engine.md  node.md  skills.md  system_prompt_replace.md
