[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IlinaEngine"
version = "0.8.3"
description = "Ilina Engine 是一个以对话树为核心的 AI 聊天后端系统。支持树状对话、读写文件、MCP 和 Skills"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Foves7017"}
]
requires-python = ">=3.12"
dependencies = [
    "setuptools<82",
    "FovesConfig",
    "FovesLog",
    "openai",
    "mcp",
    "win10toast",
]

[project.urls]
Repository = "https://github.com/Foves7017/IlinaEngine"

[tool.hatch.build.targets.wheel]
packages = ["IlinaEngine"]
